--- a/src/LogExpert/LogExpert.csproj
+++ b/src/LogExpert/LogExpert.csproj
@@ -16,8 +16,8 @@
     <OutputPath>$(SolutionDir)..\bin\$(Configuration)</OutputPath>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <ApplicationHighDpiMode>PerMonitorV2</ApplicationHighDpiMode>
-	<ForceDesignerDPIUnaware>true</ForceDesignerDPIUnaware>
-    <NoWarn>CS1591;CA1416;</NoWarn>
+    <ForceDesignerDPIUnaware>true</ForceDesignerDPIUnaware>
+    <NoWarn>CS1591;</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <Optimize>False</Optimize>
