--- a/src/JsonCompactColumnizer/JsonCompactColumnizer.csproj
+++ b/src/JsonCompactColumnizer/JsonCompactColumnizer.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <OutputType>Library</OutputType>
+	<IsTestProject>false</IsTestProject>
     <RootNamespace>JsonColumnizer</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
