--- a/src/WinFormsUI/WinFormsUI.csproj
+++ b/src/WinFormsUI/WinFormsUI.csproj
@@ -9,6 +9,7 @@
     <AssemblyOriginatorKeyFile>..\Solution Items\Key.snk</AssemblyOriginatorKeyFile>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
+	<IsTestProject>false</IsTestProject>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
     <PublishUrl>publish\</PublishUrl>
