--- a/src/LogexpertgRPCService/LogexpertgRPCService.csproj
+++ b/src/LogexpertgRPCService/LogexpertgRPCService.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
+	<IsTestProject>false</IsTestProject>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <PropertyGroup>
