--- a/src/SDK/Columnizer/Columnizer/ExampleColumnizer.csproj
+++ b/src/SDK/Columnizer/Columnizer/ExampleColumnizer.csproj
@@ -10,6 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ExampleColumnizer</RootNamespace>
     <AssemblyName>ExampleColumnizer</AssemblyName>
+	<IsTestProject>false</IsTestProject>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
