--- a/src/SDK/ContextMenu/ContextMenu/ContextMenu.csproj
+++ b/src/SDK/ContextMenu/ContextMenu/ContextMenu.csproj
@@ -10,6 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ContextMenu</RootNamespace>
     <AssemblyName>ContextMenu</AssemblyName>
+	<IsTestProject>false</IsTestProject>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <StartupObject>
