--- a/src/SDK/Log4jXmlColumnizer/Log4jXmlColumnizer.csproj
+++ b/src/SDK/Log4jXmlColumnizer/Log4jXmlColumnizer.csproj
@@ -7,6 +7,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C41A517B-7502-4B17-9119-55D5716FAD65}</ProjectGuid>
     <OutputType>Library</OutputType>
+	<IsTestProject>false</IsTestProject>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Log4jXmlColumnizer</RootNamespace>
     <AssemblyName>Log4jXmlColumnizer</AssemblyName>
