--- a/src/SftpFileSystemx86/SftpFileSystemx86.csproj
+++ b/src/SftpFileSystemx86/SftpFileSystemx86.csproj
@@ -7,6 +7,7 @@
     <AssemblyName>SftpFileSystem</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
+	<IsTestProject>false</IsTestProject>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <AssemblyTitle>SftpFileSystemx86</AssemblyTitle>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
