--- a/.github/workflows/test_dotnet.yml
+++ b/.github/workflows/test_dotnet.yml
@@ -14,6 +14,9 @@ jobs:
 
     runs-on: windows-latest
 
+    env:
+      Solution_Name: Logexpert
+
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
