Removed the WinFormsUI and using the nuget version instead

--- a/src/LogExpert/LogExpert.csproj
+++ b/src/LogExpert/LogExpert.csproj
@@ -76,6 +76,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DockPanelSuite" />
+    <PackageReference Include="DockPanelSuite.ThemeVS2015" />
     <PackageReference Include="Grpc.AspNetCore" />
     <PackageReference Include="Google.Protobuf" />
     <PackageReference Include="Grpc.Core" />
@@ -85,7 +87,6 @@
     <PackageReference Include="NLog" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\dockpanelsuite\WinFormsUI\WinFormsUI.csproj" />
     <ProjectReference Include="..\ColumnizerLib\ColumnizerLib.csproj" />
     <ProjectReference Include="..\LogexpertgRPCService\LogexpertgRPCService.csproj" />
   </ItemGroup>
