--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageVersion Include="chocolatey" Version="2.4.1" />
     <PackageVersion Include="CsvHelper" Version="33.0.1" />
+    <PackageVersion Include="DockPanelSuite" Version="3.1.1" />
+    <PackageVersion Include="DockPanelSuite.ThemeVS2015" Version="3.1.1" />
     <PackageVersion Include="GitVersion.CommandLine" Version="5.12.0" />
     <PackageVersion Include="GitVersion.Core" Version="6.1.0" />
     <PackageVersion Include="Google.Protobuf" Version="3.30.1" />
