strongly named and signed

--- a/src/PluginRegistry/LogExpert.PluginRegistry.csproj
+++ b/src/PluginRegistry/LogExpert.PluginRegistry.csproj
@@ -3,8 +3,19 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Nullable>enable</Nullable>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\Solution Items\Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="..\Solution Items\AssemblyVersion.cs" Link="AssemblyVersion.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\Solution Items\Key.snk" Link="Key.snk" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="NLog" />
