--- a/src/Logexpert.Core/Logexpert.Core.csproj
+++ b/src/Logexpert.Core/Logexpert.Core.csproj
@@ -4,8 +4,19 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\Solution Items\Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+
+	<ItemGroup>
+		<Compile Include="..\Solution Items\AssemblyVersion.cs" Link="AssemblyVersion.cs" />
+	</ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\Solution Items\Key.snk" Link="Key.snk" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" />
