--- a/src/Logexpert.Resources/Logexpert.Resources.csproj
+++ b/src/Logexpert.Resources/Logexpert.Resources.csproj
@@ -4,12 +4,23 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\Solution Items\Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="..\Solution Items\AssemblyVersion.cs" Link="AssemblyVersion.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="strings\de\" />
     <Folder Include="strings\en\" />
     <Folder Include="strings\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\Solution Items\Key.snk" Link="Key.snk" />
   </ItemGroup>
 
   <ItemGroup>
