--- a/src/FlashIconHighlighter/FlashIconHighlighter.csproj
+++ b/src/FlashIconHighlighter/FlashIconHighlighter.csproj
@@ -35,5 +35,7 @@
       <Link>Key.snk</Link>
     </None>
   </ItemGroup>
-  <PropertyGroup />
+  <PropertyGroup>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
 </Project>
