--- a/src/ColumnizerLib/ColumnizerLib.csproj
+++ b/src/ColumnizerLib/ColumnizerLib.csproj
@@ -18,7 +18,7 @@
     <Optimize>True</Optimize>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>False</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\Solution Items\Key.snk</AssemblyOriginatorKeyFile>
