--- a/src/FlashIconHighlighter/FlashIconHighlighter.csproj
+++ b/src/FlashIconHighlighter/FlashIconHighlighter.csproj
@@ -17,7 +17,7 @@
     <Optimize>True</Optimize>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>False</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\Solution Items\Key.snk</AssemblyOriginatorKeyFile>
