--- a/src/LogExpert/LogExpert.csproj
+++ b/src/LogExpert/LogExpert.csproj
@@ -16,8 +16,8 @@
     <NoWarn>CS1591;</NoWarn>
     <OutputPath>$(SolutionDir)..\bin\$(Configuration)</OutputPath>
     <OutputType>WinExe</OutputType>
-    <SignAssembly>True</SignAssembly>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <SignAssembly>false</SignAssembly>
+    <TargetFramework>net8.0</TargetFramework>
     <UseWindowsForms>False</UseWindowsForms>
   </PropertyGroup>
 
@@ -32,7 +32,7 @@
     <Compile Include="..\Solution Items\AssemblyVersion.cs">
       <Link>Properties\AssemblyVersion.cs</Link>
     </Compile>
-    <None Include="..\Solution Items\Key.snk">
+    <None Include="..\..\Solution Items\Key.snk">
       <Link>Key.snk</Link>
     </None>
     <None Update="Start.cmd">
@@ -52,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ColumnizerLib\ColumnizerLib.csproj" />
-    <ProjectReference Include="..\Logexpert.UI\LogExpert.UI.csproj" />
+    <ProjectReference Include="..\LogExpert.UI\LogExpert.UI.csproj" />
     <ProjectReference Include="..\PluginRegistry\LogExpert.PluginRegistry.csproj" />
   </ItemGroup>
   <ItemGroup>
