--- a/src/RegexColumnizer.UnitTests/RegexColumnizer.UnitTests.csproj
+++ b/src/RegexColumnizer.UnitTests/RegexColumnizer.UnitTests.csproj
@@ -8,7 +8,7 @@
     <OutputPath>bin\$(Configuration)</OutputPath>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>False</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\Solution Items\Key.snk</AssemblyOriginatorKeyFile>
