Remove all UI code from the Core project

--- a/src/LogExpert.Core/LogExpert.Core.csproj
+++ b/src/LogExpert.Core/LogExpert.Core.csproj
@@ -8,6 +8,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\Solution Items\Key.snk</AssemblyOriginatorKeyFile>
+    <PublishAot>false</PublishAot>
+    <NoWarn>CS8625;CS8603;CS8618;CS8600;CS8603;CS8602;CS8604;CS8622;CS8601;</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,7 +23,6 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="NLog" />
-    <PackageReference Include="System.Drawing.Common" />
   </ItemGroup>
 
   <ItemGroup>
