--- a/src/LogExpert.UI/LogExpert.UI.csproj
+++ b/src/LogExpert.UI/LogExpert.UI.csproj
@@ -6,7 +6,9 @@
     <ForceDesignerDPIUnaware>true</ForceDesignerDPIUnaware>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+    <NoWarn>CS8625;CS8603;CS8618;CS8600;CS8603;CS8602;CS8604;CS8622;CS8601;CS8605;</NoWarn>
+    <Nullable>enable</Nullable>
+    <PublishAot>false</PublishAot>
     <SignAssembly>True</SignAssembly>
     <TargetFramework>net8.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
