Removed UI dependencies from DefaultPlugins by removing relevant code to the UI project. changed other projects to be .net8 and not .net8-windows.

--- a/src/GlassfishColumnizer/GlassfishColumnizer.csproj
+++ b/src/GlassfishColumnizer/GlassfishColumnizer.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <OutputType>Library</OutputType>
-	<IsTestProject>false</IsTestProject>
+    <IsTestProject>false</IsTestProject>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <OutputPath>$(SolutionDir)..\bin\$(Configuration)\plugins</OutputPath>
