--- a/src/LogExpert.UI/LogExpert.UI.csproj
+++ b/src/LogExpert.UI/LogExpert.UI.csproj
@@ -40,6 +40,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Dialogs\Eminus\EminusConfigDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
