--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -245,6 +245,21 @@ dotnet_naming_style.begins_with_i.required_suffix =
 dotnet_naming_style.begins_with_i.word_separator = 
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
 
+#### The Nullable Knights ####
+
+dotnet_diagnostic.CS8625.severity = none
+dotnet_diagnostic.CS8603.severity = none
+dotnet_diagnostic.CS8618.severity = none
+dotnet_diagnostic.CS8600.severity = none
+dotnet_diagnostic.CS8602.severity = none
+dotnet_diagnostic.CS8604.severity = none
+dotnet_diagnostic.CS8622.severity = none
+dotnet_diagnostic.CS8601.severity = none
+dotnet_diagnostic.CS8605.severity = none
+dotnet_diagnostic.CS0649.severity = none
+dotnet_diagnostic.CS0169.severity = none
+dotnet_diagnostic.CS1591.severity = none
+
 #### Analyzers Rules ####
 
 ## Microsoft.CodeAnalysis.CSharp.CodeStyle
