Removed the thread that watches file changes. Handle local file and file:// URI. SFTP not working.

--- a/src/LogExpert.Core/LogExpert.Core.csproj
+++ b/src/LogExpert.Core/LogExpert.Core.csproj
@@ -9,6 +9,7 @@
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\Solution Items\Key.snk</AssemblyOriginatorKeyFile>
     <PublishAot>false</PublishAot>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
