--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="chocolatey" Version="2.4.1" />
+    <PackageVersion Include="Core.System.Windows.Forms" Version="1.0.0-alpha6" />
     <PackageVersion Include="CsvHelper" Version="33.0.1" />
     <PackageVersion Include="DockPanelSuite" Version="3.1.1" />
     <PackageVersion Include="DockPanelSuite.ThemeVS2015" Version="3.1.1" />
