--- a/src/ColumnizerLib/ColumnizerLib.nuspec
+++ b/src/ColumnizerLib/ColumnizerLib.nuspec
@@ -4,13 +4,14 @@
     <id>LogExpert.ColumnizerLib</id>
     <version>$version$</version>
     <title>LogExpert ColumnizerLib</title>
-    <authors>Zarunbal Previous:Hagen Raab</authors>
-    <owners>Zarunbal</owners>
-    <license type="expression">MIT</license>
-    <projectUrl>https://github.com/zarunbal/LogExpert</projectUrl>
+    <authors>Zarunbal, Hagen Raab, Hirogen, RandallFlagg and others</authors>
+    <owners>Zarunbal, Hirogen</owners>
+    <licenseUrl>https://cdn.rawgit.com/LogExperts/LogExpert/v##version##/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/Logexperts/LogExpert</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <bugTrackerUrl>https://github.com/LogExperts/LogExpert//issues</bugTrackerUrl>
+    <releaseNotes>https://github.com/LogExperts/LogExpert//releases/tag/v##version##</releaseNotes>
     <description>Columnizer Lib for Logexpert plugins</description>
-    <releaseNotes>See https://github.com/zarunbal/LogExpert/releases/tag/v$version$</releaseNotes>
     <copyright>Copyright 2025</copyright>
     <tags>LogExpert Columnizer</tags>
   </metadata>
